# HueMeet

./: README.md  package.json
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend/data/: toxic.csv
backend/notebook/: test_toxic_model.ipynb
backend/src/: main.py  security.py
backend/src/models/: aura.py
backend/src/routes/: aura.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  chat-bubble.tsx  chat-date-separator.tsx  chat-header.tsx  chat-input.tsx  file-attachment.tsx  heatmap-calendar.tsx  heatmap.tsx  home-connections.tsx  home-message.tsx  home-notification.tsx  home-recommended-match.tsx  login-form.tsx  nav-user.tsx  presence-tracker.ts  signup-form.tsx  user-card.tsx  user-home-card.tsx
frontend/src/hooks/: use-conversation.ts  (+1 more)
my-proxy-worker/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
my-proxy-worker/src/: index.ts
supabase/: .gitignore  config.toml
supabase/migrations/: 20260129050337_remote_commit.sql  20260130173611_remote_schema.sql  20260131041918_alter_conversations_table.sql  20260131053011_remote_schema.sql  20260201162525_policy_for_reading_messages.sql  20260201163905_remote_schema.sql  20260201165554_remote_schema.sql  20260202162642_remote_schema.sql  20260203053748_create_conversation_policy.sql  20260203061737_remote_schema.sql  20260203133402_remote_schema.sql  20260211043402_remote_schema.sql
(+31 files in other folders)
